--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,3 +1,5 @@
+{% assign main_menu_linklist = linklists[section.settings.menu].links %}
+
 <div class="relative bg-white" x-data="{mobileMenuOpen: false}">
   <div class="mx-auto px-4 sm:px-6">
     <div class="flex justify-center items-center py-6 md:justify-start md:space-x-10">
@@ -14,7 +16,7 @@
 
       <!-- NAVIGATION MENU -->
       <nav x-data="{open: false}" class="hidden md:flex space-x-10">
-        {% for link in linklists.main-menu.links %}
+        {% for link in main_menu_linklist %}
             {% if link.links != blank %}
                 <div class="relative">
                     <button x-on:click="open = ! open" type="button" class="inline-flex items-center text-base text-gray-500 hover:text-gray-900">
@@ -67,7 +69,7 @@
                 <!-- MOBILE MENU HEADER TITLE PLUS CLOSE BUTTON -->
                 <div class="flex items-center justify-between pb-3">
                     <div>
-                        <h1 class="text-lg text-gray-500">MENU</h1>
+                        <h1 class="text-lg text-gray-500">{{section.settings.mobile_menu_title}}</h1>
                     </div>
                     <div class="-mr-2">
                         <button x-on:click="mobileMenuOpen = false" type="button" class="bg-white rounded-md p-2 text-gray-500">
@@ -80,7 +82,7 @@
                 <div class="pt-3">
                     <nav class="grid gap-y-7">
 
-                        {% for link in linklists.main-menu.links %}
+                        {% for link in main_menu_linklist %}
                             {% assign link_handle = link.handle | replace: '-', '_' %}
                             {% if link.links != blank %}
                                     <div x-data="{ {{ link_handle }}: false }" class="relative">
@@ -110,3 +112,25 @@
         </div>
     </div>
 </div>
+
+{% schema %}
+    {
+        "name": "Header",
+        "settings": [
+            {
+                "type": "text",
+                "id": "mobile_menu_title",
+                "label": "Mobile menu title.",
+                "default": "Menu",
+                "info": "Title of your Mobile menu.",
+            },
+            {
+                "type": "link_list",
+                "id": "menu",
+                "label": "Header Menu",
+                "default": "main-menu",
+
+            }
+        ]
+    }
+{% endschema %}
