--- a/sections/template-404.liquid
+++ b/sections/template-404.liquid
@@ -1,12 +1,24 @@
-<h1>{{'general.404.title' | t}}</h1>
+<h1>{{section.settings.title}}</h1>
 <p>
-  {{'general.404.subtext_html' | t}}
+  {{section.settings.subtext_title | escape}}
 </p>
 
 {% schema %}
 {
-  "name": "404 Template",
-  "tag": "section",
-  "class": "section-404"
+  "name": "Template 404",
+  "settings": [
+    {
+      "type": "text",
+      "id": "title",
+      "default": "404",
+      "label": "404 Heading Title",
+    },
+    {
+      "type": "text",
+      "id": "subtext_title",
+      "default": "We're sorry, but the page you were looking for doesn't exist.",
+      "label": "404 Subtext Title",
+    }
+  ]
 }
 {% endschema %} 
