--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -1,67 +1,66 @@
 {% for block in section.blocks %}
     {% case block.type %}
         {% when 'article_title' %}
-        <h1>{{ block.settings.title | escape }}</h1>
+            <h1>{{ article.title }}</h1>
         {% when 'article_author' %}
-        <small>{{ block.settings.author | escape }}</small>
-        {% when 'article_date' %}
-        <time datetime="{{ block.settings.published_at | date: '%Y-%m-%d' }}">
-            {{ block.settings.published_at | date: '%B %d, %Y' }}
-        </time>
+            {% if section.settings.enable_author %}
+                <small>{{ article.author }}</small>
+            {% endif %}
+        {% when 'article_published_date' %}
+            {% if section.settings.enable_published_date %}
+                <time datetime="{{ article.published_at | date: '%Y-%m-%d' }}">{{ article.published_at | date: '%Y-%m-%d' }}</time>
+            {% endif %}
         {% when 'featured_image' %}
-        <img src="{{ block.settings.image | img_url: 'large' }}" alt="{{ block.settings.image.alt | escape }}">
+            <img src="{{ article.image | img_url: 'large'}}" alt="{{ article.image.alt }}">
         {% when 'article_content' %}
-        <div>{{ block.settings.content }}</div>
+            <div class="">{{ article.content }}</div> 
+        {% else %}
     {% endcase %}
 {% endfor %}
 
-<div>{{ article.content }}</div>
-
 {% schema %}
 {
-  "name": "Article Template",
-  "tag": "section",
-  "class": "article-template-section",
-  "settings": [
-    {
-      "type": "checkbox",
-      "id": "enable_author",
-      "label": "Display Author",
-      "default": true
-    },
-    {
-      "type": "checkbox",
-      "id": "enable_published_date",
-      "label": "Display Published Date",
-      "default": true
-    }
-  ],
-  "blocks": [
-    {
-      "type": "article_title",
-      "name": "Title",
-      "limit": 1
-    },
-    {
-      "type": "article_author",
-      "name": "Author",
-      "limit": 1
-    },
-    {
-      "type": "article_date",
-      "name": "Published Date",
-      "limit": 1
-    },
-    {
-      "type": "featured_image",
-      "name": "Featured Image",
-      "limit": 1
-    },
-    {
-      "type": "article_content",
-      "name": "Content",
-      "limit": 1
-    }
-  ],
+    "name": "Template Article",
+    "settings": [
+        {
+            "type": "checkbox",
+            "id": "enable_author",
+            "default": true,
+            "label": "Display Author Name"
+        },
+        {
+            "type": "checkbox",
+            "id": "enable_published_date",
+            "default": true,
+            "label": "Display Published Date"
+        }
+    ],
+    "blocks": [
+        {
+            "type": "article_title",
+            "name": "Title",
+            "limit": 1
+        },
+        {
+            "type": "article_author",
+            "name": "Author",
+            "limit": 1
+        },
+        {
+            "type": "article_published_date",
+            "name": "Published Date",
+            "limit": 1
+        },
+        {
+            "type": "featured_image",
+            "name": "Thumbnail",
+            "limit": 1
+        },
+        {
+            "type": "article_content",
+            "name": "Content",
+            "limit": 1
+        }
+    ]
 }
 {% endschema %}
