--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -45,7 +45,99 @@
     {% endfor %}
 </article>
 
+{% if blog.comments_enabled? %}
+    <div id="comments" class="my-8">
+        {% if article.comments_count > 0 %}
+            <div class="flex-1 items-center justify-center mx-auto max-w-4xl px-4">
+                <h1 class="text-lg mb-4 font-medium">See what people are saying</h1>
 
+                {% paginate article.comments by 5 %}
+                    {% for comment in article.comments %}
+                        <div class="flex-1 border my-4 px-4 py-2 sm:px-6 sm:py-4 leading-relaxed">
+                            <span class="comment-author">{{ comment.author }}</span> <span class="text-xs text-gray-400">{{ comment.created_at | date: format: 'default' }}</span>
+                            <p class="text-sm">{{ comment.content }}</p>
+                        </div>
+                    {% endfor %}
+
+                    {% if paginate.pages > 1 %}
+                        {{ paginate | default_pagination }}
+                    {% endif %}
+                {% endpaginate %}
+            </div>
+        {% else %}
+            There are no comments in this article
+        {% endif %}
+    </div>
+
+    <div id="comment_form" class="mb-8">
+        {% form 'new_comment', article %}
+            <div class="flex-1 mx-auto items-center justify-center max-w-4xl px-4">
+                {% if form.errors %}
+                    <div class="border p-5">
+                        <div class="flex flex-row items-center w-full my-3">
+                            <div class="text-red-500">
+                                {% render 'icon-failed' %}
+                            </div>
+                            <div class="text-sm font-medium ml-3">
+                                Oh no! Your comment was not posted
+                            </div>
+                        </div>
+                        <ul class="px-4 mb-3 ml-7 list-decimal">
+                            {% for error in form.errors %}
+                                <li>
+                                    <span>{{ form.errors.messages[error] }}</span>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% elsif form.posted_successfully? %}
+                    <div class="flex flex-row items-center w-full my-3 p-5">
+                        <div class="text-green-500">
+                            {% render 'icon-success' %}
+                        </div>
+                        <div class="text-sm font-medium ml-3">Comment is posted successfully</div>
+                    </div>
+                {% endif %}
+
+                <div class="px-1 md:flex mb-3">
+                    <div class="px-3 md:w-1/2">
+                        <label for="comment_author" class="text-gray-700 font-medium uppercase text-xs mb-2">Name</label>
+                        <input 
+                            type="text" 
+                            name="comment[author]" 
+                            id="comment_author" 
+                            class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
+                            placeholder="Jane Doe"
+                            required
+                        >
+                    </div>
+                    <div class="px-3 md:w-1/2">
+                        <label for="comment_email" class="text-gray-700 font-medium uppercase text-xs mb-2">Email</label>
+                        <input 
+                            type="email" 
+                            name="comment[email]" 
+                            id="comment_email" 
+                            class="w-full text-gray-700 border py-3 px-4 mb-3 focus:outline-none"
+                            placeholder="jane@doe.com"
+                            required
+                        >
+                    </div>
+                </div>
+                <div class="px-1 md:flex mb-3">
+                    <div class="md:w-full px-3">
+                        <label for="comment_content" class="text-gray-700 font-medium uppercase text-xs mb-2">Comment</label>
+                        <textarea class="w-full text-gray-700 resize-none h-20 py-2 px-3 focus:outline-none border" name="comment[body]" id="comment_content" required></textarea>
+                    </div>
+                </div>
+                <div class="px-1 md:flex mb-3">
+                    <div class="md:w-full px-3">
+                        <input type="submit" class="w-full cursor-pointer px-4 py-2 border text-base font-medium text-white bg-gray-900 hover:bg-gray-500" value="Post comment">
+                    </div>
+                </div>
+            </div>
+        {% endform %}
+    </div>
+{% endif %}
 
 {% schema %}
 {
