--- a/assets/application.css
+++ b/assets/application.css
@@ -338,6 +338,9 @@
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
+  }
   .w-full {
     width: 100%;
   }
