--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -1,4 +1,4 @@
-{% paginate blog.articles by 3 %}
+{% paginate blog.articles by section.settings.number_of_blog_posts %}
     {% for article in blog.articles %}
         <div>
             {% if article.image %}
@@ -15,3 +15,20 @@
         </div>
     {% endfor %}
 {% endpaginate %}
+
+{% schema %}
+{
+    "name": "Blog",
+    "settings": [
+        {
+            "type": "range",
+            "id": "number_of_blog_posts",
+            "step": 1,
+            "min": 1,
+            "max": 6,
+            "label": "Blog posts per page",
+            "default": 3
+        }
+    ]
+}
+{% endschema %}
