tiled blog landing page

--- a/sections/template-blog.liquid
+++ b/sections/template-blog.liquid
@@ -1,25 +1,57 @@
-{% paginate blog.articles by section.settings.number_of_blog_posts %}
-    {% for article in blog.articles %}
-        <div>
-            {% if article.image %}
-                <img src="{{ article.image | img_url: 'medium' }}" alt="{{ article.image.alt }}">
-            {% else %}
-                {{ 'image' | placeholder_svg_tag: 'w-20' }}
-            {% endif %}
-            <h1>{{ article.title }}</h1>
+<div class="py-8">
+    {% paginate blog.articles by section.settings.number_of_blog_posts %}
 
-            {% if article.excerpt.size > 0 %}
-            {% else %}
-                <p>{{ article.content | strip_html | truncatewords: 15}}</p>
-            {% endif %}
+        <h1 class="text-center text-3xl">{{ blog.title }}</h1>
+        
+        <div class="max-w-6xl mx-auto">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                {% for article in blog.articles %}
+                    <div class="w-full py-6 px-3">
+                        <div class="bg-white shadow-xl rounded-lg overflow-hidden">
+                            {% if article.image %}
+                                <a href="{{ article.url }}">
+                                    <img class="w-full h-80 object-cover" src="{{ article.image | img_url: 'medium' }}" alt="{{ article.image.alt }}">
+                                </a>
+                            {% else %}
+                                {{ 'image' | placeholder_svg_tag: 'w-full h-80 object-cover bg-gray-100' }}
+                            {% endif %}
+
+                            <div class="p-4">
+                                <h1 class="text-xl font-medium my-4">{{ article.title }}</h1>
+
+                                {% if article.excerpt.size > 0 %}
+                                    <p>{{ article.excerpt | strip_html | truncatewords: 15 }}</p>
+                                {% else %}
+                                    <p>{{ article.content | strip_html | truncatewords: 15 }}</p>
+                                {% endif %}
+
+                                <a href="{{ article.url }}" class="font-medium text-blue-600 hover: text-blue-800 my-4 block">{{ section.settings.blog_read_more }}</a>
+                            </div>
+
+                            
+                        </div>
+                        
+                    </div>
+                {% endfor %}
+            </div>
         </div>
-    {% endfor %}
-{% endpaginate %}
+
+        
+    {% endpaginate %}
+</div>
+
+
 
 {% schema %}
 {
     "name": "Blog",
     "settings": [
+        {
+            "type": "text",
+            "id": "blog_read_more",
+            "label": "Read more label",
+            "default": "Read more"
+        },
         {
             "type": "range",
             "id": "number_of_blog_posts",
