--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -42,7 +42,7 @@
     ],
     "presets": [
         {
-            "name": "Featured Collection"
+            "name": "Featured Collection1"
         }
     ]
 }
