--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -40,6 +40,10 @@
             "label": "Number of products to show"
         }
     ],
-
+    "presets": [
+        {
+            "name": "Featured Collection"
+        }
+    ]
 }
 {% endschema %}
