--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -9,9 +9,9 @@
         {{ media | video_tag: controls: true, class: 'w-full h-full object-cover' }}
 
     {% when 'model' %}
-        <product-model>
+        <product-model data-media-id="{{ media.id }}">
             <div>
-                <button x-on:click="productModalOpen = true" class="w-full h-full bg-gray-100 border relative">
+                <button id="productModelOpenButton_{{ media.id }}" x-on:click="productModalOpen = true" class="w-full h-full bg-gray-100 border relative">
                     <span class="border bg-gray-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                         {% render 'icon-model-viewer' %}
                     </span>
